--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "webpack-dev-server --mode development",
+    "serve": "webpack-dev-server --mode development",
     "build": "webpack --mode development"
   },
   "dependencies": {
